# s2.term

./: Cargo.toml  Dockerfile  README.md  package-lock.json
rust-pty-host/: Cargo.toml
rust-pty-host/src/: main.rs
ts-frontend/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
ts-frontend/public/: index.html
ts-frontend/src/: main.ts
