[package]
name = "s2term-pty-host"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
streamstore = "0.16.2"
tokio = { version = "1.42.0", features = ["full"] }
portable-pty = "0.9"
tokio-stream = "0.1.17"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
clap = { version = "4.5.31", features = ["derive"] }
